some features implemented and ready to be tested